nginxServiceDeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: anisnamespace
  name: nginx-deployment
  labels: 
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template: 
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: devops2022.azurecr.io/nginxtim:${GIT_COMMIT}
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  namespace: anisnamespace
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
