ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxanis
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
  - host: devops2022.de
    http:
      paths:
      - path: /anis
        pathType: Prefix
        backend:
          service:
            name: nginxanis
            port:
              number: 80
